force-app/main/default/objects/custom_create245__c/custom_create245__c.object-meta.xml
<CustomObject>
    <label>Custom created object245</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects245</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>