force-app/main/default/objects/custom_create245__c/fields/custom_create_245field594__c.field-meta.xml
<CustomField>
    <fullName>custom_create_245field594__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 245field594</label>
    <type>Checkbox</type>
</CustomField>